# gridwell

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/gridwell-core/: Cargo.toml
crates/gridwell-core/src/: color.rs  length.rs  lib.rs
crates/gridwell-ffi/: Cargo.toml
crates/gridwell-ffi/src/: lib.rs
crates/gridwell-ffi/tests/: ffi_tests.rs
crates/gridwell-ir/: Cargo.toml
crates/gridwell-ir/src/: cell.rs  config.rs  content.rs  lib.rs  span.rs  style.rs  validation.rs
crates/gridwell-ir/tests/: fixtures.rs
crates/gridwell-python/: Cargo.toml
crates/gridwell-python/src/: lib.rs
crates/gridwell-writer-ansi/: Cargo.toml
crates/gridwell-writer-ansi/src/: lib.rs  render.rs
crates/gridwell-writer-ansi/tests/: snapshots.rs
crates/gridwell-writer-ansi/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-docx/: Cargo.toml
crates/gridwell-writer-docx/src/: lib.rs  render.rs  xml.rs
crates/gridwell-writer-docx/tests/: snapshots.rs
crates/gridwell-writer-docx/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-html/: Cargo.toml
crates/gridwell-writer-html/src/: lib.rs  render.rs
crates/gridwell-writer-html/tests/: snapshots.rs
crates/gridwell-writer-html/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-latex/: Cargo.toml
crates/gridwell-writer-latex/src/: lib.rs  render.rs
crates/gridwell-writer-latex/tests/: snapshots.rs
crates/gridwell-writer-latex/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-pandoc/: Cargo.toml
crates/gridwell-writer-pandoc/src/: lib.rs  render.rs
crates/gridwell-writer-pandoc/tests/: snapshots.rs
crates/gridwell-writer-pandoc/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-pptx/: Cargo.toml
crates/gridwell-writer-pptx/src/: lib.rs  render.rs  xml.rs
crates/gridwell-writer-pptx/tests/: snapshots.rs
crates/gridwell-writer-pptx/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  snapshots__snapshot_content_rich.snap  snapshots__snapshot_empty_body.snap  snapshots__snapshot_footnote_single.snap  snapshots__snapshot_minimal_1x1.snap  snapshots__snapshot_minimal_no_header.snap  snapshots__snapshot_row_group_multiple.snap  snapshots__snapshot_rowspan_basic.snap  snapshots__snapshot_styles_borders.snap  snapshots__snapshot_summary_rows.snap  snapshots__snapshot_unicode_cjk.snap
crates/gridwell-writer-quarto/: Cargo.toml
crates/gridwell-writer-quarto/src/: lib.rs  render.rs
crates/gridwell-writer-quarto/tests/: snapshots.rs
crates/gridwell-writer-quarto/tests/snapshots/: snapshots__snapshot_colspan_basic.snap  snapshots__snapshot_column_widths.snap  snapshots__snapshot_comprehensive_reference.snap  (+10 more)
crates/gridwell-writer-rtf/: Cargo.toml
crates/gridwell-writer-rtf/src/: lib.rs  render.rs
crates/gridwell-writer-rtf/tests/: snapshots.rs
crates/gridwell-writer-svg/: Cargo.toml
crates/gridwell-writer-svg/src/: lib.rs  render.rs
crates/gridwell-writer-svg/tests/: snapshots.rs
crates/gridwell-writer-typst/: Cargo.toml
crates/gridwell-writer-typst/src/: lib.rs  render.rs
crates/gridwell-writer-typst/tests/: snapshots.rs
crates/gridwell-writer-xlsx/: Cargo.toml
crates/gridwell-writer-xlsx/src/: lib.rs  render.rs  xml.rs
crates/gridwell-writer-xlsx/tests/: snapshots.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_ir.rs  fuzz_render_html.rs  fuzz_validate.rs
r-package/src/rust/: Cargo.toml  document.rs
(+119 files in other folders)
