[workspace]
members = [
    "crates/gridwell-ir",
    "crates/gridwell-core",
    "crates/gridwell-writer-html",
    "crates/gridwell-writer-latex",
    "crates/gridwell-writer-typst",
    "crates/gridwell-writer-rtf",
    "crates/gridwell-writer-svg",
    "crates/gridwell-writer-ansi",
    "crates/gridwell-writer-pandoc",
    "crates/gridwell-writer-quarto",
    "crates/gridwell-writer-docx",
    "crates/gridwell-writer-xlsx",
    "crates/gridwell-writer-pptx",
    "crates/gridwell-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rich-iannone/gridwell"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
insta = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", features = ["serialize"] }
