[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gridwell"
version = "0.1.0"
description = "Fast multi-format table rendering from a declarative IR"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup",
]

[tool.maturin]
manifest-path = "crates/gridwell-python/Cargo.toml"
python-source = "python"
module-name = "gridwell._native"

[tool.pytest.ini_options]
testpaths = ["tests"]
