[package]
name = "gridwell-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared utilities for gridwell: CSS length parsing, color handling, unit conversion"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
