[package]
name = "gridwell-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C FFI surface for gridwell: parse IR, validate, render to all formats"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-writer-html = { path = "../gridwell-writer-html" }
gridwell-writer-latex = { path = "../gridwell-writer-latex" }
gridwell-writer-typst = { path = "../gridwell-writer-typst" }
gridwell-writer-rtf = { path = "../gridwell-writer-rtf" }
gridwell-writer-svg = { path = "../gridwell-writer-svg" }
gridwell-writer-ansi = { path = "../gridwell-writer-ansi" }
gridwell-writer-pandoc = { path = "../gridwell-writer-pandoc" }
gridwell-writer-quarto = { path = "../gridwell-writer-quarto" }
gridwell-writer-docx = { path = "../gridwell-writer-docx" }
gridwell-writer-xlsx = { path = "../gridwell-writer-xlsx" }
gridwell-writer-pptx = { path = "../gridwell-writer-pptx" }

[dev-dependencies]
serde_json = { workspace = true }
