[package]
name = "gridwell-writer-ansi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ANSI terminal writer for gridwell: IR → Rich terminal output with box-drawing"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
