[package]
name = "gridwell-writer-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Word (.docx) writer for gridwell: IR → OOXML document"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
