[package]
name = "gridwell-writer-html"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTML writer for gridwell: IR → semantic HTML5 with scoped CSS"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }

[dev-dependencies]
insta = "1"
serde_json = { workspace = true }
