[package]
name = "gridwell-writer-pandoc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pandoc AST JSON writer for gridwell: IR → Pandoc native table AST"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
