[package]
name = "gridwell-writer-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PowerPoint (.pptx) writer for gridwell: IR → PresentationML table"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
