[package]
name = "gridwell-writer-rtf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "RTF writer for gridwell: IR → Rich Text Format"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
