[package]
name = "gridwell-writer-typst"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typst writer for gridwell: IR → Typst table markup"

[dependencies]
gridwell-ir = { path = "../gridwell-ir" }
gridwell-core = { path = "../gridwell-core" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
